# crewai-examples

./: .env  .env.example  .gitignore  Agents_Pesquisador_e_Escritor_de_artigo.ipynb  Assistente_de_Machine_Learning.ipynb  Automatizar o planejamento de eventos.ipynb  Colaboração de vários agentes para análise financeira.ipynb  Crew_Raspagem_Web.ipynb  Mentoria_CrewAI_Prof_Sandeco_Roteiro_Youtube.ipynb  Pesquisa_de_Mercado.ipynb  Pesquisa_e_Redação_de_Artigos_sobre_um_"tópico".ipynb  README.md  Template_Prompt_CrewAI.ipynb  crewai_flow.html  web.py
1_pdf/: README.md  rag-pdf.py
ai-news/: README.md  app.py
crewai-flows-crash-course/: README.md  requirements.txt
edu-crew/: .env.example  README.md  pyproject.toml
generation_flow/: README.md  artigo.md  main.py
guardrail-crew/: README.md  crew.py  custom_tool.py  (+1 more)
noob-vs-pro-god-tasks/noob_research_crew/: README.md  pyproject.toml  report.md
noob-vs-pro-god-tasks/noob_research_crew/src/noob_research_crew/: crew.py  main.py
noob-vs-pro-god-tasks/noob_research_crew/src/noob_research_crew/config/: agents.yaml  tasks.yaml
noob-vs-pro-god-tasks/noob_research_crew/src/noob_research_crew/tools/: tavily_search_tool.py  youtube_search_tool.py
noob-vs-pro-god-tasks/pro_research_crew/: README.md  pyproject.toml  report.md
noob-vs-pro-god-tasks/pro_research_crew/src/pro_research_crew/: crew.py  main.py
noob-vs-pro-god-tasks/pro_research_crew/src/pro_research_crew/config/: agents.yaml  tasks.yaml
noob-vs-pro-god-tasks/pro_research_crew/src/pro_research_crew/tools/: reddit_tavily_search.py  tavily_search_tool.py
(+68 files in other folders)
